Allow some projects to be publicly visible. Fix #21

--- a/app/assets/stylesheets/application/base.css.sass
+++ b/app/assets/stylesheets/application/base.css.sass
@@ -155,13 +155,13 @@ body
   form .checkbox-inner
     padding: 0 0 0 95px
   .col-box
-    width: 45%
+    width: 48%
     float: left
-    margin: 0 10% 0 0
+    margin: 0 4% 0 0
     select
       width: 110px
   .col-box2
-    width: 45%
+    width: 48%
     float: left
     select
       width: 110px
@@ -654,12 +654,12 @@ body .container h2 span.hide-responsive
   width: inherit
   text-align: inherit
   padding: 0
-span.show-responsive
+.show-responsive
   display: none
 @media screen and (max-width: 600px)
-  span.hide-responsive
+  .hide-responsive
     display: none
-  span.show-responsive
+  .show-responsive
     display: block
 
 table input.span1
